--- a/src/index.html
+++ b/src/index.html
@@ -179,9 +179,8 @@
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Secure</h2>
-                <p class="mt-2 text-3xl font-extrabold text-gray-900">Turnkey Solutions</p>
-                <p class="mt-4 text-lg text-gray-500">Peacemakr&rsquo;s Secure Data Platform has integrated with
-                    several open-source projects to provide turnkey Data Security solutions.</p>
+                <p class="mt-2 text-3xl font-extrabold text-gray-900">E2E-Encryption</p>
+                <p class="mt-4 text-lg text-gray-500">Peacemakr&rsquo;s Secure Data Platform makes it easy to add full E2E-Encryption to any SaaS product.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
                 <dl
@@ -195,7 +194,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                The Secure Data Platform
+                                Secure and Scalable Key Delivery
                             </dt>
                         </div>
                     </div>
@@ -209,7 +208,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure Logging Solution
+                                Backward Compatibility
                             </dt>
                         </div>
                     </div>
@@ -223,7 +222,21 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure Redis Solution
+                                Message Signature and Verification
+                            </dt>
+                        </div>
+                    </div>
+
+                    <div class="flex">
+                        <!-- Heroicon name: check -->
+                        <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
+                             fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                  d="M5 13l4 4L19 7"/>
+                        </svg>
+                        <div class="ml-3">
+                            <dt class="text-lg leading-6 font-medium text-gray-900">
+                                Automatic Rotations
                             </dt>
                         </div>
                     </div>
@@ -238,35 +251,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure Data Platform CLI
-                            </dt>
-                        </div>
-                    </div>
-
-                    <div class="flex">
-                        <!-- Heroicon name: check -->
-                        <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
-                             fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  d="M5 13l4 4L19 7"/>
-                        </svg>
-                        <div class="ml-3">
-                            <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure S3 Object Solution
-                            </dt>
-                        </div>
-                    </div>
-
-                    <div class="flex">
-                        <!-- Heroicon name: check -->
-                        <svg class="flex-shrink-0 h-6 w-6 text-gray-500" xmlns="http://www.w3.org/2000/svg"
-                             fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  d="M5 13l4 4L19 7"/>
-                        </svg>
-                        <div class="ml-3">
-                            <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure Apache Spark (Coming Soon)
+                                Automatic Key Expiration
                             </dt>
                         </div>
                     </div>
@@ -281,8 +266,7 @@
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Trustworthy</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Bring-Your-Own-Keys</p>
-                <p class="mt-4 text-lg text-gray-500">Peacemakr Secure Data Platform enables you and your customers
-                    to make the right decision on the threat model.
+                <p class="mt-4 text-lg text-gray-500">Invite your customers to use data protected with their own keys in your multi-tenant SaaS.
                 </p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
@@ -297,7 +281,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Invite your customers to determine where their root of trust resides
+                                Invite your customers to use their own Key Deriver
                             </dt>
                         </div>
                     </div>
@@ -311,7 +295,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Start in the cloud today, migrate to on-prem later
+                                Bring your keys, and your key's Security Policies
                             </dt>
                         </div>
                     </div>
@@ -325,7 +309,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Migrate anytime, in self-service admin portal
+                                Migrate your Key Deriver, anytime
                             </dt>
                         </div>
                     </div>
@@ -340,7 +324,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Say goodbye to HSM and SGX headaches on-prem
+                                Say goodbye to HSM and SGX integration headaches
                             </dt>
                         </div>
                     </div>
@@ -370,7 +354,21 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Data Privacy
+                                Confidentiality 
+                            </dt>
+                        </div>
+                    </div>
+
+                    <div class="flex">
+                        <!-- Heroicon name: check -->
+                        <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
+                             fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                  d="M5 13l4 4L19 7"/>
+                        </svg>
+                        <div class="ml-3">
+                            <dt class="text-lg leading-6 font-medium text-gray-900">
+                                Integrity 
                             </dt>
                         </div>
                     </div>
@@ -455,7 +453,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                On-Prem, private-cloud, and SaaS Root of Trust
+                                Well-Versioned and Backward Compatible
                             </dt>
                         </div>
                     </div>
@@ -469,13 +467,10 @@
     <div class="bg-gray-50">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
-                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Execute</h2>
+                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Ship</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Faster</p>
-                <p class="mt-4 text-lg text-gray-500">Integrate Peacemakr to goto Market securely, today. Migrate to
-                    different threat models tomorrow.</p>
-                <p class="mt-4 text-lg text-gray-500">Stop deliberating and start securing your data today without
-                    over-committing to a specific threat model. Ship secure software faster, never hard-coding
-                    cryptographic decision into clients again.</p>
+                <p class="mt-4 text-lg text-gray-500">Integrate Peacemakr today. Migrate to a new threat models tomorrow.</p>
+                <p class="mt-4 text-lg text-gray-500">Stop debating and start securing your data today. Ship secure software faster, never hard-coding decision into clients.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
                 <dl
@@ -489,7 +484,22 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                No integration overhead, through a dead-simple interface
+                                Simple and Consistent Interface
+                            </dt>
+                        </div>
+                    </div>
+
+
+                    <div class="flex">
+                        <!-- Heroicon name: check -->
+                        <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
+                             fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                  d="M5 13l4 4L19 7"/>
+                        </svg>
+                        <div class="ml-3">
+                            <dt class="text-lg leading-6 font-medium text-gray-900">
+                                No more debates: every customer chose their own threat model
                             </dt>
                         </div>
                     </div>
@@ -517,23 +527,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Disagree on a threat model? Ship on time and finish discussion later, adjusting your
-                                threat model in admin portal
-                            </dt>
-                        </div>
-                    </div>
-
-
-                    <div class="flex">
-                        <!-- Heroicon name: check -->
-                        <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
-                             fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  d="M5 13l4 4L19 7"/>
-                        </svg>
-                        <div class="ml-3">
-                            <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure defaults ensure no more wasting time to configure a new SaaS
+                                Secure by default
                             </dt>
                         </div>
                     </div>
@@ -549,12 +543,12 @@
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Consistent</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Everywhere</p>
-                <p class="mt-4 text-lg text-gray-500">Peacemakr&rsquo;s Secure Data Platform abstracts away all the
-                    hard problems behind a simple interface, so that you can quickly secure data everywhere.</p>
+                <p class="mt-4 text-lg text-gray-500">Peacemakr&rsquo;s Secure Data SDK's abstract away all the
+                    hard problems, so that you can focus on your value-add.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
                 <dl
-                        class="space-y-10 sm:space-y-0 sm:grid sm:grid-cols-2 sm:grid-rows-3 sm:grid-flow-col sm:gap-x-6 sm:gap-y-10 lg:gap-x-8">
+                        class="space-y-10 sm:space-y-0 sm:grid sm:grid-cols-2 sm:grid-rows-4 sm:grid-flow-col sm:gap-x-6 sm:gap-y-10 lg:gap-x-8">
                     <div class="flex">
                         <!-- Heroicon name: check -->
                         <svg class="flex-shrink-0 h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
@@ -564,7 +558,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure Data Python SDK
+                                <a href="https://github.com/peacemakr-io/peacemakr-python-sdk">Secure Data Python SDK</a>
                             </dt>
                         </div>
                     </div>
@@ -578,7 +572,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure Data Java SDK
+                                <a href="https://github.com/peacemakr-io/peacemakr-java-sdk">Secure Data Java SDK</a>
                             </dt>
                         </div>
                     </div>
@@ -592,7 +586,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure Data Go SDK
+                                <a href="https://github.com/peacemakr-io/peacemakr-go-sdk">Secure Data Go SDK</a>
                             </dt>
                         </div>
                     </div>
@@ -607,7 +601,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure Data iOS SDK
+                                <a href="https://github.com/peacemakr-io/peacemakr-ios-sdk">Secure Data iOS SDK</a>
                             </dt>
                         </div>
                     </div>
@@ -621,7 +615,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure Data Android SDK
+                                <a href="https://github.com/peacemakr-io/peacemakr-android-sdk">Secure Data Android SDK</a>
                             </dt>
                         </div>
                     </div>
@@ -635,7 +629,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Secure Data NodeJS SDK
+                                <a href="https://github.com/peacemakr-io/peacemakr-nodejs-sdk">Secure Data NodeJS SDK</a>
                             </dt>
                         </div>
                     </div>
@@ -668,8 +662,7 @@
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Easy</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Compliance</p>
-                <p class="mt-4 text-lg text-gray-500">Peacemakr melts away sales barriers in SMB or Enterprise
-                    markets, by helping you achieve strict compliance with regulators.</p>
+                <p class="mt-4 text-lg text-gray-500">Peacemakr removes sales barriers in regulated markets, by helping you achieve strict compliance with regulators quickly.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
                 <dl
@@ -682,9 +675,7 @@
                                   d="M5 13l4 4L19 7"/>
                         </svg>
                         <div class="ml-3">
-                            <dt class="text-lg leading-6 font-medium text-gray-900">Securely share data with intended
-                                participants seamlessly,
-                                GDPR (General Data Protection Regulation)
+                            <dt class="text-lg leading-6 font-medium text-gray-900">GDPR (General Data Protection Regulation)
                             </dt>
                         </div>
                     </div>
@@ -773,7 +764,7 @@
                 Secure Collaborations
             </p>
             <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
-                Securely share data with intended participants seamlessly.
+                Securely share protected data with authorized participants.
             </p>
         </div>
     </div>
@@ -786,8 +777,7 @@
                 At Scale
             </p>
             <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
-                Peacemakr scales with you so that you do not waste time supporting and scaling any secure data
-                infrastructure.
+                Peacemakr scales with you so that you do not waste time supporting and scaling secure data infrastructure.
             </p>
         </div>
     </div>
