--- a/src/about_us.html
+++ b/src/about_us.html
@@ -26,6 +26,16 @@
     <meta name="twitter:description"
           content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market."/>
     <script src="navbar.js" type="text/javascript"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-69K0GEH6J9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-69K0GEH6J9');
+    </script>
 </head>
 
 <body>
