--- a/src/about_us.html
+++ b/src/about_us.html
@@ -201,9 +201,7 @@
             <h2>
                 <span class="mt-2 block text-3xl text-center leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">Team</span>
             </h2>
-            <p class="mt-8 text-xl text-gray-500 leading-8">We’re a Silicon Valley, CA bootstrapped startup with a 8
-                dedicated engineers, advisors, and security experts who are passionate about solving this problem
-                simply and securely.</p>
+            <p class="mt-8 text-xl text-gray-500 leading-8">We’re a Silicon Valley, CA startup with 7 battle-scarred engineers and entrepreneurs who reimagine data security for SaaS providers.</p>
         </div>
 
         <div class="mt-6 prose prose-indigo prose-lg text-gray-500 mx-auto">
