--- a/src/index.html
+++ b/src/index.html
@@ -149,9 +149,7 @@
                     </h1>
                     <p
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        Drop-in E2E-Encryption and Bring-Your-Own-Key solutions for SaaS providers who require strong
-                        and specific data-security mechanisms to enable customers to take advantage of multi-tenant SaaS
-                        offerings
+                        Reimagining data security for SaaS providers, by delivering the key ingredients for the next generation of multi-tenant SaaS offerings
                     </p>
                 </div>
             </main>
@@ -274,7 +272,7 @@
     <div class="bg-gray-50">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
-                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Trustworthy</h2>
+                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Zero-Trust</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Bring-Your-Own-Keys</p>
                 <p class="mt-4 text-lg text-gray-500">Invite your customers to use data protected with their own keys in your multi-tenant SaaS.
                 </p>
