Clean up the language, less is more...

--- a/src/index.html
+++ b/src/index.html
@@ -145,11 +145,11 @@
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
                         <span class="block xl:inline">Peacemakr <br/></span>
-                        <span class="block text-indigo-600 xl:inline">Secure Data & Collaboration</span>
+                        <span class="block text-indigo-600 xl:inline">Data Security <br>for the API Economy</span>
                     </h1>
                     <p
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        Reimagining data security for SaaS providers, by delivering the key ingredients for the next generation of multi-tenant SaaS offerings
+                        Data security so <b>strong</b>, <i>easy</i>, and <span class="text-indigo-800">accessable</span>, that self-hosted customers return to your multi-tenant cloud
                     </p>
                 </div>
             </main>
@@ -188,7 +188,7 @@
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Secure</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">E2E-Encryption</p>
-                <p class="mt-4 text-lg text-gray-500">Peacemakr&rsquo;s Secure Data Platform makes it easy to add full E2E-Encryption to any SaaS product.</p>
+                <p class="mt-4 text-lg text-gray-500">Peacemakr&rsquo;s Secure Data Platform makes it easy to accept customer-encrypted data on any api.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
                 <dl
@@ -274,7 +274,7 @@
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Zero-Trust</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Bring-Your-Own-Keys</p>
-                <p class="mt-4 text-lg text-gray-500">Invite your customers to use data protected with their own keys in your multi-tenant SaaS.
+                <p class="mt-4 text-lg text-gray-500">Invite your customers to encrypt their own data, and use it in your multi-tenant SaaS.
                 </p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
@@ -347,8 +347,8 @@
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Headache Free</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Correct the First Time</p>
-                <p class="mt-4 text-lg text-gray-500">Peacemakr provides the full and granular control over your data, to meet even the most
-                    rigorous threat models. These include.</p>
+                <p class="mt-4 text-lg text-gray-500">Peacemakr provides the control over your data, to meet even the most
+                    rigorous threat models.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
                 <dl
@@ -477,8 +477,7 @@
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Ship</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Faster</p>
-                <p class="mt-4 text-lg text-gray-500">Integrate Peacemakr today. Migrate to a new threat models tomorrow.</p>
-                <p class="mt-4 text-lg text-gray-500">Stop debating and start securing your data today. Ship secure software faster, never hard-coding decision into clients.</p>
+                <p class="mt-4 text-lg text-gray-500">Deliver today, and migrate to a new threat model tomorrow.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
                 <dl
@@ -507,7 +506,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                No more debates: every customer chose their own threat model
+                                End the debates: every customer chose their own threat model
                             </dt>
                         </div>
                     </div>
@@ -551,8 +550,7 @@
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Consistent</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Everywhere</p>
-                <p class="mt-4 text-lg text-gray-500">Peacemakr&rsquo;s Secure Data SDK's abstract away all the
-                    hard problems, so that you can focus on your value-add.</p>
+                <p class="mt-4 text-lg text-gray-500">Peacemakr&rsquo;s Secure Data SDK's solve all the hard problems, so that you can focus on your value-add.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
                 <dl
@@ -670,7 +668,7 @@
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Easy</h2>
                 <p class="mt-2 text-3xl font-extrabold text-gray-900">Compliance</p>
-                <p class="mt-4 text-lg text-gray-500">Peacemakr removes sales barriers in regulated markets, by helping you achieve strict compliance with regulators quickly.</p>
+                <p class="mt-4 text-lg text-gray-500">Peacemakr removes sales barriers in regulated verticals.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
                 <dl
