--- a/src/index.html
+++ b/src/index.html
@@ -149,7 +149,7 @@
                     </h1>
                     <p
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        Data security so <b>strong</b>, <i>easy</i>, and <span class="text-indigo-800">accessable</span>, that self-hosted customers return to your multi-tenant cloud
+                        Data security so strong, easy, and accessible, that self-hosted customers return to your multi-tenant cloud
                     </p>
                 </div>
             </main>
@@ -332,7 +332,7 @@
                         </svg>
                         <div class="ml-3">
                             <dt class="text-lg leading-6 font-medium text-gray-900">
-                                Say goodbye to HSM and SGX integration headaches
+                                HSM friendly
                             </dt>
                         </div>
                     </div>
@@ -346,7 +346,7 @@
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Headache Free</h2>
-                <p class="mt-2 text-3xl font-extrabold text-gray-900">Correct the First Time</p>
+                <p class="mt-2 text-3xl font-extrabold text-gray-900">Data Ownership</p>
                 <p class="mt-4 text-lg text-gray-500">Peacemakr provides the control over your data, to meet even the most
                     rigorous threat models.</p>
             </div>
@@ -549,7 +549,7 @@
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
                 <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Consistent</h2>
-                <p class="mt-2 text-3xl font-extrabold text-gray-900">Everywhere</p>
+                <p class="mt-2 text-3xl font-extrabold text-gray-900">End-to-end Encryption SDKs</p>
                 <p class="mt-4 text-lg text-gray-500">Peacemakr&rsquo;s Secure Data SDK's solve all the hard problems, so that you can focus on your value-add.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
