--- a/src/media.html
+++ b/src/media.html
@@ -182,7 +182,7 @@
                     </p>
                     <p class="mt-3 text-base text-gray-500">
                         First, what is Application Layer Data Security? It’s any protection mechanism that helps secures
-                        data that operates at the highest layer of the computational stack, in the application itself...
+                        data that operates at the highest layer of the computational stack ...
                     </p>
                 </a>
                 <div class="mt-3">
