--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
                     <a href="#"
                        class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
                        onclick="location.href='mailto:sales@peacemakr.io'">
-                        Schedule Free Data Security Assessment
+                        Sign Up for Free
                     </a>
                 </div>
             </div>
