--- a/src/index.html
+++ b/src/index.html
@@ -475,8 +475,8 @@
     <div class="bg-gray-50">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
-                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Ship</h2>
-                <p class="mt-2 text-3xl font-extrabold text-gray-900">Faster</p>
+                <h2 class="text-base font-semibold text-indigo-600 uppercase tracking-wide">Ship Faster</h2>
+                <p class="mt-2 text-3xl font-extrabold text-gray-900">Time to Market</p>
                 <p class="mt-4 text-lg text-gray-500">Deliver today, and migrate to a new threat model tomorrow.</p>
             </div>
             <div class="mt-12 lg:mt-0 lg:col-span-2">
@@ -816,11 +816,11 @@
                                 <div>
                                     <h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
                                         id="tier-standard">
-                                        Business
+                                        Basic
                                     </h3>
                                 </div>
                                 <p class="mt-5 text-lg text-gray-500">
-                                    Perfect for small to medium size businesses
+                                    Perfect for POCs or small size businesses
                                 </p>
                             </div>
                             <div
@@ -906,7 +906,7 @@
                                        class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
                                        onclick="location.href='https://admin.peacemakr.io'"
                                        aria-describedby="tier-standard">
-                                        Sign Up Now
+                                        Sign Up for Free Now
                                     </a>
                                 </div>
                             </div>
@@ -917,11 +917,11 @@
                                 <div>
                                     <h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
                                         id="tier-standard">
-                                        Enterprise
+                                        Standard
                                     </h3>
                                 </div>
                                 <p class="mt-5 text-lg text-gray-500">
-                                    Perfect for large size businesses
+                                    Perfect for medium size businesses
                                 </p>
                             </div>
                             <div
@@ -1018,78 +1018,7 @@
         </div>
     </div>
 
-    <!-- Learn More block -->
-    <div class="bg-white py-16 px-4 overflow-hidden sm:px-6 lg:px-8 lg:py-24">
-        <div class="relative max-w-xl mx-auto">
-            <svg class="absolute left-full transform translate-x-1/2" width="404" height="404" fill="none"
-                 viewBox="0 0 404 404" aria-hidden="true">
-                <defs>
-                    <pattern id="85737c0e-0916-41d7-917f-596dc7edfa27" x="0" y="0" width="20" height="20"
-                             patternUnits="userSpaceOnUse">
-                        <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor"/>
-                    </pattern>
-                </defs>
-                <rect width="404" height="404" fill="url(#85737c0e-0916-41d7-917f-596dc7edfa27)"/>
-            </svg>
-            <svg class="absolute right-full bottom-0 transform -translate-x-1/2" width="404" height="404"
-                 fill="none" viewBox="0 0 404 404" aria-hidden="true">
-                <defs>
-                    <pattern id="85737c0e-0916-41d7-917f-596dc7edfa27" x="0" y="0" width="20" height="20"
-                             patternUnits="userSpaceOnUse">
-                        <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor"/>
-                    </pattern>
-                </defs>
-                <rect width="404" height="404" fill="url(#85737c0e-0916-41d7-917f-596dc7edfa27)"/>
-            </svg>
-            <div class="text-center">
-                <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                    Tell us
-                </h2>
-                <p class="mt-4 text-lg leading-6 text-gray-500">
-                    What is your greatest data security challenge?
-                </p>
-            </div>
-            <div class="mt-12">
-                <form action="https://formspree.io/mpzpvjrq" method="POST"
-                      class="grid grid-cols-1 gap-y-6 sm:grid-cols-2 sm:gap-x-8">
-                    <div>
-                        <label for="first_name" class="block text-sm font-medium text-gray-700">First name</label>
-                        <div class="mt-1">
-                            <input type="text" name="first_name" id="first_name" autocomplete="given-name"
-                                   class="py-3 px-4 block w-full shadow-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md">
-                        </div>
-                    </div>
-                    <div>
-                        <label for="last_name" class="block text-sm font-medium text-gray-700">Last name</label>
-                        <div class="mt-1">
-                            <input type="text" name="last_name" id="last_name" autocomplete="family-name"
-                                   class="py-3 px-4 block w-full shadow-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md">
-                        </div>
-                    </div>
-                    <div class="sm:col-span-2">
-                        <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
-                        <div class="mt-1">
-                            <input id="email" name="email" type="email" autocomplete="email"
-                                   class="py-3 px-4 block w-full shadow-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md">
-                        </div>
-                    </div>
-                    <div class="sm:col-span-2">
-                        <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
-                        <div class="mt-1">
-                                <textarea id="message" name="message" rows="4"
-                                          class="py-3 px-4 block w-full shadow-sm focus:ring-indigo-500 focus:border-indigo-500 border-gray-300 rounded-md"></textarea>
-                        </div>
-                    </div>
-                    <div class="sm:col-span-2">
-                        <button type="submit"
-                                class="w-full inline-flex items-center justify-center px-6 py-3 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-                            Let's talk
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
+    <!-
 </main>
 
 <footer class="bg-gray-900">
