--- a/src/index.html
+++ b/src/index.html
@@ -149,8 +149,20 @@
                     </h1>
                     <p
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        Data security so strong, easy, and accessible, that self-hosted customers return to your multi-tenant cloud
+                        Data security so strong, easy and accessible, that self-hosted customers return to your multi-tenant cloud
                     </p>
+                <h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
+                                        id="tier-standard">
+                                        Secure
+                                    </h3>
+<h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
+                                        id="tier-standard">
+                                        Automated
+                                    </h3>
+                    <h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
+                                        id="tier-standard">
+                                        Zero Trust
+                                    </h3>
                 </div>
             </main>
         </div>
@@ -175,8 +187,8 @@
                 <div class="inline-flex rounded-md shadow">
                     <a href="#"
                        class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
-                       onclick="location.href='mailto:sales@peacemakr.io'">
-                        Sign Up for Free
+                        onclick="location.href='https://admin.peacemakr.io'">
+                        Sign Up for Free Now
                     </a>
                 </div>
             </div>
@@ -820,7 +832,7 @@
                                     </h3>
                                 </div>
                                 <p class="mt-5 text-lg text-gray-500">
-                                    Perfect for POCs or small size businesses
+                                    Perfect for POCs and small size businesses
                                 </p>
                             </div>
                             <div
@@ -837,7 +849,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            12,000 keys delivered
+                                            Unlimited Risk Domains
                                         </p>
                                     </li>
 
@@ -882,7 +894,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            Unlimited Risk Domains
+                                            500 API calls
                                         </p>
                                     </li>
 
@@ -897,9 +909,24 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            Email Support
+                                            FAQ Support
                                         </p>
                                     </li>
+                                     <li class="flex items-start">
+                                        <div class="flex-shrink-0">
+                                            <!-- Heroicon name: check -->
+                                            <svg class="h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
+                                                 fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                                                 aria-hidden="true">
+                                                <path stroke-linecap="round" stroke-linejoin="round"
+                                                      stroke-width="2" d="M5 13l4 4L19 7"/>
+                                            </svg>
+                                        </div>
+                                        <p class="ml-3 text-base text-gray-700">
+                                            99.50% guaranteed uptime SLA
+                                        </p>
+                                    </li>
+                                    
                                 </ul>
                                 <div class="rounded-md shadow">
                                     <a href="#"
@@ -938,7 +965,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            All Business Features
+                                            All Basic Features
                                         </p>
                                     </li>
 
@@ -953,7 +980,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            Migration from Business to Enterprise
+                                            3 Key derivers included
                                         </p>
                                     </li>
 
@@ -983,7 +1010,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            Dedicated SaaS
+                                            25,000 API calls
                                         </p>
                                     </li>
 
@@ -998,16 +1025,31 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            24/7 Support
+                                            Email Support
                                         </p>
                                     </li>
+                                    <li class="flex items-start">
+                                        <div class="flex-shrink-0">
+                                            <!-- Heroicon name: check -->
+                                            <svg class="h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
+                                                 fill="none" viewBox="0 0 24 24" stroke="currentColor"
+                                                 aria-hidden="true">
+                                                <path stroke-linecap="round" stroke-linejoin="round"
+                                                      stroke-width="2" d="M5 13l4 4L19 7"/>
+                                            </svg>
+                                        </div>
+                                        <p class="ml-3 text-base text-gray-700">
+                                            99.90% guaranteed uptime SLA
+                                        </p>
+                                    </li>
+
                                 </ul>
                                 <div class="rounded-md shadow">
                                     <a href="#"
-                                       class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-gray-800 hover:bg-gray-900"
-                                       onclick="location.href='mailto:sales@peacemakr.io'"
+                                       class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
+                                       onclick="location.href='https://admin.peacemakr.io'"
                                        aria-describedby="tier-standard">
-                                        Request Quote
+                                        Sign Up for $499 per Month
                                     </a>
                                 </div>
                             </div>
