--- a/src/index.html
+++ b/src/index.html
@@ -151,6 +151,7 @@
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
                         Data security so strong, easy and accessible, that self-hosted customers return to your multi-tenant cloud
                     </p>
+                    <p> &nbsp;</p> 
                 <h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
                                         id="tier-standard">
                                         Secure
