--- a/src/index.html
+++ b/src/index.html
@@ -800,7 +800,23 @@
             </p>
         </div>
     </div>
-
+    
+<!-- Customer block -->
+    <div class="relative bg-white py-16 sm:py-24 lg:py-32 overflow-hidden">
+        <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
+            <h2 class="text-base font-semibold tracking-wider text-indigo-600 uppercase">Clients</h2>
+            <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
+                Voice of Our Customers
+            </p>
+            <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
+                We selected Peacemakr because of their full-stack solution that helped us to go to market at startup-speed for our entire portfolio of mobile, server-side and web properties. We were able to focus on our core competencies while letting Peacemakr's robust yet simple integration handle our complex data-security requirements, and at a fraction of the cost of architecting, building, and scaling out a full security framework from scratch.
+            </p>
+            <p class="mt-5 max-w-prose mx-auto font-semibold text-xl text-gray-500">
+                Enlai Chu, CEO of Productive
+            </p>
+        </div>
+    </div>
+    
     <!-- Pricing block -->
     <div class="bg-gray-900">
         <div class="pt-12 sm:pt-16 lg:pt-24">
@@ -934,7 +950,7 @@
                                        class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
                                        onclick="location.href='https://admin.peacemakr.io'"
                                        aria-describedby="tier-standard">
-                                        Sign Up for Free Now
+                                        Sign Up for Free
                                     </a>
                                 </div>
                             </div>
