--- a/src/index.html
+++ b/src/index.html
@@ -808,7 +808,7 @@
             <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
                 Voice of Our Customers
             </p>
-            <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
+            <p class="mt-5 max-w-prose mx-auto font-extrabold text-xl text-gray-500">"<class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
                 <i> We selected Peacemakr because of their full-stack solution that helped us to go to market at startup-speed for our entire portfolio of mobile, server-side and web properties. We were able to focus on our core competencies while letting Peacemakr's robust yet simple integration handle our complex data-security requirements, and at a fraction of the cost of architecting, building, and scaling out a full security framework from scratch. </i>
             </p>
             <p class="mt-5 max-w-prose mx-auto font-extrabold text-xl text-gray-500">
