--- a/src/index.html
+++ b/src/index.html
@@ -809,9 +809,9 @@
                 Voice of Our Customers
             </p>
             <p> &nbsp;</p> 
-            <p><span class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">"</span><span class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
+            <p><span class="mt-5 max-w-prose mx-auto font-extrabold text-xl text-gray-900">"</span><span class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
                 <i> We selected Peacemakr because of their full-stack solution that helped us to go to market at startup-speed for our entire portfolio of mobile, server-side and web properties. We were able to focus on our core competencies while letting Peacemakr's robust yet simple integration handle our complex data-security requirements, and at a fraction of the cost of architecting, building, and scaling out a full security framework from scratch. </i>
-                </span><span class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">"</span>
+                </span><span class="mt-5 max-w-prose mx-auto font-extrabold text-xl text-gray-900">"</span>
                 </p>
             <p class="mt-5 max-w-prose mx-auto font-extrabold text-xl text-gray-500">
                 Enlai Chu, CEO of Productive
