--- a/src/index.html
+++ b/src/index.html
@@ -857,21 +857,7 @@
                             <div
                                     class="flex-1 flex flex-col justify-between px-6 pt-6 pb-8 bg-gray-50 space-y-6 sm:p-10 sm:pt-6">
                                 <ul class="space-y-4">
-                                    <li class="flex items-start">
-                                        <div class="flex-shrink-0">
-                                            <!-- Heroicon name: check -->
-                                            <svg class="h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
-                                                 fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                                                 aria-hidden="true">
-                                                <path stroke-linecap="round" stroke-linejoin="round"
-                                                      stroke-width="2" d="M5 13l4 4L19 7"/>
-                                            </svg>
-                                        </div>
-                                        <p class="ml-3 text-base text-gray-700">
-                                            Unlimited Risk Domains
-                                        </p>
-                                    </li>
-
+                                   
                                     <li class="flex items-start">
                                         <div class="flex-shrink-0">
                                             <!-- Heroicon name: check -->
@@ -913,7 +899,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            500 API calls
+                                            500 API calls / month
                                         </p>
                                     </li>
 
@@ -1003,6 +989,7 @@
                                         </p>
                                     </li>
 
+                                   
                                     <li class="flex items-start">
                                         <div class="flex-shrink-0">
                                             <!-- Heroicon name: check -->
@@ -1014,22 +1001,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            Dedicated Key Ownership
-                                        </p>
-                                    </li>
-
-                                    <li class="flex items-start">
-                                        <div class="flex-shrink-0">
-                                            <!-- Heroicon name: check -->
-                                            <svg class="h-6 w-6 text-green-500" xmlns="http://www.w3.org/2000/svg"
-                                                 fill="none" viewBox="0 0 24 24" stroke="currentColor"
-                                                 aria-hidden="true">
-                                                <path stroke-linecap="round" stroke-linejoin="round"
-                                                      stroke-width="2" d="M5 13l4 4L19 7"/>
-                                            </svg>
-                                        </div>
-                                        <p class="ml-3 text-base text-gray-700">
-                                            25,000 API calls
+                                            25,000 API calls / month
                                         </p>
                                     </li>
 
