--- a/src/index.html
+++ b/src/index.html
@@ -985,7 +985,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            3 Key derivers included
+                                            Key derivers available
                                         </p>
                                     </li>
 
