--- a/src/index.html
+++ b/src/index.html
@@ -970,7 +970,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            All Basic Features
+                                            All Basic Features included
                                         </p>
                                     </li>
 
